Z-index fixed.

--- a/styles/main.css
+++ b/styles/main.css
@@ -27,7 +27,6 @@ header {
   justify-content: space-between;
   height: 250px;
   padding: 35px 150px 0px 150px;
-  z-index: -2;
 }
 header h1 {
   font-size: 24px;
@@ -44,6 +43,7 @@ header p {
   display: flex;
   width: 200px;
   height: 50px;
+  position: relative;
   gap: 10px;
   justify-content: flex-end;
   align-items: center;
@@ -52,8 +52,7 @@ header p {
 .switch-theme p {
   font-size: 14px;
   font-weight: 400;
-
-  color: var(--color-text);
+  color: white;
 }
 .toggle {
   width: 55px;
@@ -84,6 +83,7 @@ header p {
   gap: 30px;
   top: 150px;
   padding: 0 150px;
+  z-index: 1;
 }
 .stats-item {
   width: 280px;
@@ -155,6 +155,8 @@ header p {
 
 .rating {
   font-size: 0.9em;
+  display: flex;
+  align-items: center;
 }
 .rating img {
   margin-right: 8px;
